# opamconfig

./: .gitignore  Makefile  Makefile.config.in  Makefile.project  README.md  configure.ac  detect_configure_settings.sh  opamconfig.sh  opamconfig_conf.sh.in  opamconfig_install.sh  opamconfig_test.sh
opam/: descr  opam
