### configure.ac -- Autoconf for Rashell

# Rashell (https://github.com/michipili/rashell)
# This file is part of Rashell
#
# Copyright © 2015—2016 Michael Grünewald
#
# This file must be used under the terms of the CeCILL-B.
# This source file is licensed as described in the file COPYING, which
# you should have received as part of this distribution. The terms
# are also available at
# http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt

AC_INIT([opamconfig.sh])
AC_PATH_PROG([BREW], [brew], [no])
AC_PATH_PROG([OCAMLFIND], [ocamlfind], [no])
AC_PATH_PROG([PIP], [pip], [no])
AC_PATH_PROG([PKG], [pkg], [no])
AC_PATH_PROG([PORT], [port], [no])
AC_CONFIG_FILES([Makefile.config opamconfig_conf.sh])
AC_OUTPUT

### End of file `configure.ac'
